Friends connection creation.
