# swagger/swagger.yaml
@@ -46,6 +46,10 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/SuccessResponse'
+        '400':
+          description: Bad request
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '401':
           description: Unauthorized
           schema:
